--- a/PrivateMail/Cells/AddressCollectionViewCell.xib
+++ b/PrivateMail/Cells/AddressCollectionViewCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -60,7 +59,6 @@
                 <constraint firstItem="xP7-lK-IPZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YQd-9w-av4"/>
                 <constraint firstAttribute="trailing" secondItem="xP7-lK-IPZ" secondAttribute="trailing" id="l7R-SF-IF7"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="134" height="50"/>
             <connections>
                 <outlet property="backView" destination="xP7-lK-IPZ" id="gQA-a5-tB8"/>
