--- a/PrivateMail/Cells/MailAttachmentTableViewCell.xib
+++ b/PrivateMail/Cells/MailAttachmentTableViewCell.xib
@@ -26,7 +26,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attachment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbc-hT-nyA">
-                        <rect key="frame" x="41" y="13" width="234" height="18"/>
+                        <rect key="frame" x="41" y="13" width="194" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -43,24 +43,42 @@
                             <action selector="downloadButtonAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3qI-Fv-IJV"/>
                         </connections>
                     </button>
+                    <button opaque="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DfN-6X-eHb" userLabel="Import">
+                        <rect key="frame" x="240" y="7" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="D8N-pd-uji"/>
+                        </constraints>
+                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal" image="key"/>
+                        <connections>
+                            <action selector="importKeyButtonAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Sq0-tr-q2q"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="DfN-6X-eHb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0Gj-QF-h4x"/>
                     <constraint firstItem="g4H-Hb-jcI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Fcp-c6-6ew"/>
+                    <constraint firstItem="DfN-6X-eHb" firstAttribute="width" secondItem="DfN-6X-eHb" secondAttribute="height" multiplier="1:1" id="QIG-yi-bjJ"/>
                     <constraint firstItem="zbc-hT-nyA" firstAttribute="leading" secondItem="g4H-Hb-jcI" secondAttribute="trailing" constant="5" id="Smq-Si-Bof"/>
                     <constraint firstItem="zbc-hT-nyA" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Uyz-YR-80p"/>
+                    <constraint firstItem="DfN-6X-eHb" firstAttribute="leading" secondItem="zbc-hT-nyA" secondAttribute="trailing" constant="5" id="VTt-iw-NJL"/>
                     <constraint firstItem="eq1-ad-6AM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="W1L-pE-1wX"/>
                     <constraint firstAttribute="trailing" secondItem="eq1-ad-6AM" secondAttribute="trailing" constant="10" id="cZj-e1-rVx"/>
+                    <constraint firstItem="eq1-ad-6AM" firstAttribute="leading" secondItem="DfN-6X-eHb" secondAttribute="trailing" constant="10" id="glD-N4-YJp"/>
                     <constraint firstItem="g4H-Hb-jcI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="tvO-9H-hWX"/>
-                    <constraint firstItem="eq1-ad-6AM" firstAttribute="leading" secondItem="zbc-hT-nyA" secondAttribute="trailing" constant="5" id="xxt-41-2rL"/>
+                    <constraint firstItem="eq1-ad-6AM" firstAttribute="leading" secondItem="zbc-hT-nyA" secondAttribute="trailing" priority="750" constant="5" id="xxt-41-2rL"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="importConstraint" destination="glD-N4-YJp" id="IVb-El-Rrs"/>
+                <outlet property="importKeyButton" destination="DfN-6X-eHb" id="IXy-VY-h5R"/>
                 <outlet property="titleLabel" destination="zbc-hT-nyA" id="bTJ-7G-BUR"/>
             </connections>
         </tableViewCell>
     </objects>
     <resources>
         <image name="clip" width="25" height="25"/>
-        <image name="download" width="20" height="20"/>
+        <image name="download" width="14.5" height="14.5"/>
+        <image name="key" width="67.5" height="67.5"/>
     </resources>
 </document>
